manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lcafrontend-svc
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: lcafrontend
