manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lca-ingress-uri
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: lca
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Exact
            backend:
              service:
                name: lcafrontend-svc
                port:
                  number: 80
